Bug 1111879 - Avoid copying an nsFont when we don't need to modify it locally. r=dbaron